force-app/main/default/objects/box__BoxSign_Signer_Input__c/box__BoxSign_Signer_Input__c.object-meta.xml
<CustomObject>
    <description>An object to hold the input values from a document signer.</description>
    <label>Box Sign Signer Input</label>
    <nameField>
        <displayFormat>SRSI-{0000000000}</displayFormat>
        <label>Signer Input Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Box Sign Signer Inputs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>