force-app/main/default/objects/box__BoxSign_Signer_Input__c/fields/box__Date_Value__c.field-meta.xml
<CustomField>
    <fullName>box__Date_Value__c</fullName>
    <label>Date Value</label>
    <type>Date</type>
</CustomField>