force-app/main/default/objects/box__BoxSign_Signer_Input__c/fields/box__Label__c.field-meta.xml
<CustomField>
    <fullName>box__Label__c</fullName>
    <description>The label given to the input tag.</description>
    <label>Label</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>