force-app/main/default/objects/box__BoxSign_Signer_Input__c/fields/box__Text__c.field-meta.xml
<CustomField>
    <fullName>box__Text__c</fullName>
    <description>Text fields are synced here.</description>
    <label>Text</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>